--- a/index.html
+++ b/index.html
@@ -68,6 +68,45 @@
             color: rgba(255, 255, 255, 0.6);
         }
 
+        .header-right {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
+
+        .auth-info {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 13px;
+            color: rgba(255, 255, 255, 0.7);
+        }
+
+        .login-btn,
+        .logout-btn {
+            padding: 6px 12px;
+            border-radius: 999px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            background: rgba(255, 255, 255, 0.05);
+            color: #ffffff;
+            font-size: 12px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .login-btn:hover,
+        .logout-btn:hover {
+            background: rgba(255, 255, 255, 0.12);
+        }
+
+        .user-email {
+            max-width: 180px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+        }
+
         .sync-status {
             display: flex;
             align-items: center;
@@ -708,9 +747,14 @@
                 <h1>🎯 Incubadora de Ideas</h1>
                 <p class="subtitle">Organiza y prioriza tus proyectos</p>
             </div>
-            <div class="sync-status">
-                <div class="sync-dot" id="sync-dot"></div>
-                <span id="sync-text">Conectado</span>
+            <div class="header-right">
+                <div class="auth-info" id="auth-info">
+                    <button class="login-btn" id="login-btn-initial">Entrar con Google</button>
+                </div>
+                <div class="sync-status">
+                    <div class="sync-dot" id="sync-dot"></div>
+                    <span id="sync-text">Sin conexión</span>
+                </div>
             </div>
         </header>
         
@@ -776,6 +820,7 @@
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database-compat.js"></script>
 
     <script>
@@ -793,6 +838,7 @@
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
         const database = firebase.database();
         const cardsRef = database.ref('cards');
 
@@ -814,6 +860,7 @@
 
         let cards = [];
         let selectedCardId = null;
+        let cardsListenerInitialized = false;
 
         function updateSyncStatus(status) {
             const dot = document.getElementById('sync-dot');
@@ -837,18 +884,29 @@
             document.getElementById('loading-overlay').classList.add('hidden');
         }
 
-        // Listen for realtime updates from Firebase
-        cardsRef.on('value', (snapshot) => {
-            const data = snapshot.val();
-            cards = data ? Object.values(data) : [];
-            renderBoard();
-            hideLoading();
-            updateSyncStatus('connected');
-        }, (error) => {
-            console.error('Firebase error:', error);
-            updateSyncStatus('offline');
-            hideLoading();
-        });
+        function showLoading(message) {
+            const overlay = document.getElementById('loading-overlay');
+            const textEl = document.querySelector('.loading-text');
+            if (message) textEl.textContent = message;
+            overlay.classList.remove('hidden');
+        }
+
+        function initCardsListener() {
+            if (cardsListenerInitialized) return;
+            cardsListenerInitialized = true;
+
+            cardsRef.on('value', (snapshot) => {
+                const data = snapshot.val();
+                cards = data ? Object.values(data) : [];
+                renderBoard();
+                hideLoading();
+                updateSyncStatus('connected');
+            }, (error) => {
+                console.error('Firebase error:', error);
+                updateSyncStatus('offline');
+                hideLoading();
+            });
+        }
 
         // Monitor connection state
         database.ref('.info/connected').on('value', (snapshot) => {
@@ -1270,6 +1328,64 @@
         });
 
         document.getElementById('modal-column').addEventListener('change', updateCard);
+
+        // --- Auth with Google ---
+        function renderAuthUI(user) {
+            const authInfo = document.getElementById('auth-info');
+            if (!authInfo) return;
+
+            if (!user) {
+                authInfo.innerHTML = `
+                    <button class="login-btn" id="login-btn">Entrar con Google</button>
+                `;
+                const loginBtn = document.getElementById('login-btn');
+                if (loginBtn) {
+                    loginBtn.addEventListener('click', loginWithGoogle);
+                }
+                document.getElementById('board').innerHTML = '';
+                updateSyncStatus('offline');
+                hideLoading();
+                return;
+            }
+
+            const email = user.email || '';
+            authInfo.innerHTML = `
+                <span class="user-email" title="${email}">${email}</span>
+                <button class="logout-btn" id="logout-btn">Salir</button>
+            `;
+            const logoutBtn = document.getElementById('logout-btn');
+            if (logoutBtn) {
+                logoutBtn.addEventListener('click', () => auth.signOut());
+            }
+        }
+
+        function loginWithGoogle() {
+            const provider = new firebase.auth.GoogleAuthProvider();
+            showLoading('Autenticando...');
+            auth.signInWithPopup(provider)
+                .catch((error) => {
+                    console.error('Error de login:', error);
+                    hideLoading();
+                    alert('No se pudo iniciar sesión. Intenta de nuevo.');
+                });
+        }
+
+        auth.onAuthStateChanged((user) => {
+            renderAuthUI(user);
+            if (user) {
+                showLoading('Cargando tus ideas...');
+                initCardsListener();
+            } else {
+                cards = [];
+                renderBoard();
+            }
+        });
+
+        // Soporte por si el botón inicial se carga antes del JS
+        const initialLoginBtn = document.getElementById('login-btn-initial');
+        if (initialLoginBtn) {
+            initialLoginBtn.addEventListener('click', loginWithGoogle);
+        }
     </script>
 </body>
 </html>
